force-app/main/default/objects/DeliveryManagement__c/DeliveryManagement__c.object-meta.xml
<CustomObject>
    <label>納期管理</label>
    <nameField>
        <displayFormat>DL-{000000}</displayFormat>
        <label>納期管理番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>