force-app/main/default/objects/DeliveryManagement__c/fields/Alarm1__c.field-meta.xml
<CustomField>
    <fullName>Alarm1__c</fullName>
    <formula>IF (  OR( AND(   IssueDate1__c &lt;    TODAY() ,  NOT(TEXT(Alart1__c) = &quot;承諾済み&quot; )),
              AND( ApproveDate1__c &lt;    TODAY() , NOT(TEXT(Alart2__c) = &quot;承諾済み&quot;) ) ,
              AND( CarryingDate1__c &lt;   TODAY() , OR(Alart01__c = false, NOT(TEXT(Alart3__c) = &quot;承諾済み&quot;)))  ,
              AND( OnSiteWitness1__c &lt;    TODAY() ,   NOT(TEXT(Alart5__c) = &quot;承諾済み&quot;))  ,
              AND( OnSiteWitnessPlanningDate1__c &lt;   TODAY() ,  OR( NOT(TEXT(Alart6__c) = &quot;承諾済み&quot;) ,  Alart03__c = false) ) ), &quot;期限切れ&quot;, null
         )</formula>
    <label>期限後アラーム</label>
    <type>Text</type>
</CustomField>