force-app/main/default/objects/DeliveryManagement__c/fields/Alart01__c.field-meta.xml
<CustomField>
    <fullName>Alart01__c</fullName>
    <defaultValue>false</defaultValue>
    <label>トラック情報入手済</label>
    <type>Checkbox</type>
</CustomField>