force-app/main/default/objects/DeliveryManagement__c/fields/Alart03__c.field-meta.xml
<CustomField>
    <fullName>Alart03__c</fullName>
    <defaultValue>false</defaultValue>
    <label>技術員確保済</label>
    <type>Checkbox</type>
</CustomField>