force-app/main/default/objects/DeliveryManagement__c/fields/Alart1__c.field-meta.xml
<CustomField>
    <fullName>Alart1__c</fullName>
    <label>納入図発行ステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>初期設定</fullName>
                <default>true</default>
                <label>初期設定</label>
            </value>
            <value>
                <fullName>暫定</fullName>
            </value>
            <value>
                <fullName>確定</fullName>
            </value>
            <value>
                <fullName>承諾済み</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>