force-app/main/default/objects/DeliveryManagement__c/fields/ApproveDate1__c.field-meta.xml
<CustomField>
    <fullName>ApproveDate1__c</fullName>
    <label>納入図 承諾予定日</label>
    <type>Date</type>
</CustomField>