force-app/main/default/objects/DeliveryManagement__c/fields/CarryingDate1__c.field-meta.xml
<CustomField>
    <fullName>CarryingDate1__c</fullName>
    <label>機器搬入 搬入予定日</label>
    <type>Date</type>
</CustomField>