force-app/main/default/objects/DeliveryManagement__c/fields/DeliveryManagementOwnersDivision__c.field-meta.xml
<CustomField>
    <fullName>DeliveryManagementOwnersDivision__c</fullName>
    <formula>TEXT(Owner:User.DepartmentAndDivision__c )</formula>
    <label>所有者の本支社</label>
    <type>Text</type>
</CustomField>