force-app/main/default/objects/DeliveryManagement__c/fields/EquipmentDeliverytime__c.field-meta.xml
<CustomField>
    <fullName>EquipmentDeliverytime__c</fullName>
    <label>機器出荷時期</label>
    <type>Date</type>
</CustomField>