force-app/main/default/objects/DeliveryManagement__c/fields/Factory01__c.field-meta.xml
<CustomField>
    <fullName>Factory01__c</fullName>
    <label>製作所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>