force-app/main/default/objects/DeliveryManagement__c/fields/Factory__c.field-meta.xml
<CustomField>
    <fullName>Factory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>場所別</label>
    <referenceTo>Factory__c</referenceTo>
    <relationshipLabel>納期管理</relationshipLabel>
    <relationshipName>DeliveryManagements</relationshipName>
    <type>Lookup</type>
</CustomField>