force-app/main/default/objects/DeliveryManagement__c/fields/IssueDate1__c.field-meta.xml
<CustomField>
    <fullName>IssueDate1__c</fullName>
    <label>納入図 発行予定日</label>
    <type>Date</type>
</CustomField>