force-app/main/default/objects/DeliveryManagement__c/fields/OnSiteWitness1__c.field-meta.xml
<CustomField>
    <fullName>OnSiteWitness1__c</fullName>
    <label>工場立会 立会予定日</label>
    <type>Date</type>
</CustomField>