force-app/main/default/objects/DeliveryManagement__c/fields/OnSiteWitnessPlanningDate1__c.field-meta.xml
<CustomField>
    <fullName>OnSiteWitnessPlanningDate1__c</fullName>
    <label>現地調整 現調予定日</label>
    <type>Date</type>
</CustomField>