force-app/main/default/objects/DeliveryManagement__c/fields/Opportunity32__c.field-meta.xml
<CustomField>
    <fullName>Opportunity32__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>案件</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>納期管理</relationshipLabel>
    <relationshipName>Opportunities33</relationshipName>
    <type>Lookup</type>
</CustomField>