force-app/main/default/objects/DeliveryManagement__c/fields/ReceiveReceipt__c.field-meta.xml
<CustomField>
    <fullName>ReceiveReceipt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>検収受領</label>
    <type>Checkbox</type>
</CustomField>