force-app/main/default/objects/DeliveryManagement__c/fields/ReceiveReceiptDate__c.field-meta.xml
<CustomField>
    <fullName>ReceiveReceiptDate__c</fullName>
    <label>検収受領日</label>
    <type>Date</type>
</CustomField>