force-app/main/default/objects/DeliveryManagement__c/fields/SubmitBill__c.field-meta.xml
<CustomField>
    <fullName>SubmitBill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>請求書提出</label>
    <type>Checkbox</type>
</CustomField>