force-app/main/default/objects/DeliveryManagement__c/fields/SubmitBillDate__c.field-meta.xml
<CustomField>
    <fullName>SubmitBillDate__c</fullName>
    <label>請求書提出日</label>
    <type>Date</type>
</CustomField>