force-app/main/default/objects/DeliveryManagement__c/fields/SubmitDeliveryPaper__c.field-meta.xml
<CustomField>
    <fullName>SubmitDeliveryPaper__c</fullName>
    <defaultValue>false</defaultValue>
    <label>納品書提出</label>
    <type>Checkbox</type>
</CustomField>