force-app/main/default/objects/DeliveryManagement__c/fields/SubmitDeliveryPaperDate__c.field-meta.xml
<CustomField>
    <fullName>SubmitDeliveryPaperDate__c</fullName>
    <label>納品書提出日</label>
    <type>Date</type>
</CustomField>