force-app/main/default/objects/DeliveryManagement__c/fields/SubmitReceipt__c.field-meta.xml
<CustomField>
    <fullName>SubmitReceipt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>検収依頼書提出</label>
    <type>Checkbox</type>
</CustomField>