force-app/main/default/objects/DeliveryManagement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Factory01__c</columns>
    <columns>Opportunity32__c</columns>
    <columns>IssueDate1__c</columns>
    <columns>ApproveDate1__c</columns>
    <columns>CarryingDate1__c</columns>
    <columns>OnSiteWitness1__c</columns>
    <columns>OnSiteWitnessPlanningDate1__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>