force-app/main/default/objects/DeliveryManagement__c/listViews/X12DeliveryManagement.listView-meta.xml
<ListView>
    <fullName>X12DeliveryManagement</fullName>
    <columns>NAME</columns>
    <columns>Factory01__c</columns>
    <columns>Opportunity32__c</columns>
    <columns>IssueDate1__c</columns>
    <columns>ApproveDate1__c</columns>
    <columns>CarryingDate1__c</columns>
    <columns>OnSiteWitness1__c</columns>
    <columns>OnSiteWitnessPlanningDate1__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DeliveryManagementOwnersDivision__c</field>
        <operation>equals</operation>
        <value>03_東北支社</value>
    </filters>
    <label>12.東北支社の納期管理</label>
</ListView>